# road-asset-recovery

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: endpoints.py
src/services/: assets_identification.py  image_integration.py
static_dir/: app.js  index.html  styles.css
